# ssh-serial

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  sdkconfig
cmake/: config.h.in
components/esp_ssh/: BuildLibSSH.cmake  CMakeLists.txt  esp_ssh.c  esp_ssh_extra.c
components/esp_ssh/include/: esp_ssh.h  esp_ssh_extra.h  esp_ssh_extras.h  ifaddrs.h
components/esp_ssh/include/sys/: statvfs.h
components/wifi/: CMakeLists.txt  connect.c  connect.h  dns.c  dns.h  provision.c  provision.h  wifi.c
components/wifi/html/: form.html  thank_you.html
components/wifi/include/: wifi.h
main/: CMakeLists.txt  Kconfig.projbuild  gpio.c  gpio.h  nvs.c  nvs.h  ssh-example.c  ssh-serial.c
